--- a/semana1/bugfixes/index.css
+++ b/semana1/bugfixes/index.css
@@ -26,7 +26,7 @@ button:focus {
 }
 
 img {
-    width: 100px;
+    width: 50px;
 }
 
 div>p:first-child {
@@ -104,6 +104,7 @@ div:last-child {
 
 table {
     width: 60%;
+    margin-left: 450px;
 }
 
 td {
