--- a/semana1/bugfixes/index.css
+++ b/semana1/bugfixes/index.css
@@ -34,7 +34,7 @@ div>p:first-child {
 }
 
 div img {
-    background: black;
+    background: white;
 }
 
 .botao-amarelo {
@@ -61,7 +61,8 @@ div img {
 }
 
 .icone {
-    height: 15px;
+    width: 20px;
+    height: 14px;
 }
 
 
