Campo de texto arrumado

--- a/semana1/bugfixes/index.css
+++ b/semana1/bugfixes/index.css
@@ -19,6 +19,10 @@ h2 {
 input {
     height: 20px;
     width: 500px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom-width: 3px;
 }
 
 button:focus {
