--- a/semana1/bugfixes/index.css
+++ b/semana1/bugfixes/index.css
@@ -46,7 +46,7 @@ div img {
     background-color: #ffaf43;
     position: absolute;
     bottom: 200px;
-    right: 800px;
+    right: 820px;
     margin: 10px;
     width: 250px;
     height: 40px;
@@ -78,6 +78,8 @@ div img {
   **/
 
 #container-de-descricao {
+    padding-top: 150px;
+    height: 300px;
     background-color: #2274a5;
     color: white;
 }
@@ -87,6 +89,7 @@ div img {
 }
 
 #container-para-comprar {
+    height: 421px;
     background-color: #e7eb90;
 }
 
