--- a/semana12/labeddit/src/index.css
+++ b/semana12/labeddit/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient(#e3e9f0bd, rgba(99, 103, 109, 0.808));
-  height: 100%;
+  height: 100vh;
 }
 
 code {
